Add: SEO metadata and update robots.txt

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Hitung biaya transaksi Indodax dengan mudah. Kalkulator ini membantu Anda mengetahui total pembayaran untuk order Limit (Maker) dan Market (Taker), termasuk estimasi jumlah koin yang akan Anda terima." />
     <title>Indodax Fee Calculator</title>
+    <meta name="description" content="Indodax fee calculator. Hitung biaya transaksi Indodax dengan mudah. Kalkulator ini membantu Anda mengetahui total pembayaran untuk order Limit (Maker) dan Market (Taker)." />
+    <meta name="google-site-verification" content="fb2F_H0XrZkksLfDhU8D9HAZ5ogV5ehnNRxujwH0M4g" />
+    <link rel="canonical" href="https://indodaxcalculator.netlify.app/" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Indodax Fee Calculator",
+        "description": "A simple, fast, and responsive web application designed to help Indodax traders calculate the total cost of purchasing a cryptocurrency, including transaction fees for both Limit (Maker) and Market (Taker) orders.",
+        "url": "https://indodaxcalculator.netlify.app/",
+        "applicationCategory": "CrytocurrencyTools",
+        "operatingSystem": "Any",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "IDR"
+        },
+        "keywords": "Indodax, calculator, fee, crypto, transaction, limit order, market order, maker, taker, kalkulator, biaya, kripto, exchange"
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
